--- a/src/main/resources/templates/memberLayout.html
+++ b/src/main/resources/templates/memberLayout.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="/css/member/memberLayout.css">
     <!-- mailAlert.js   -->
     <script src="/js/member/sendmail.js"></script>
+    <script src="/js/orders/ordersConfirm.js"></script>
     <!-- SweelAlert2   -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
