--- a/src/main/resources/templates/faq/faq_layout.html
+++ b/src/main/resources/templates/faq/faq_layout.html
@@ -64,20 +64,15 @@
             </li>
             <li class="border-top my-3"></li>
             <li class="mb-1">
-                <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
-                        data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="false">
-                    1:1 문의
-                </button>
-                <div class="collapse" id="account-collapse">
-                    <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                        <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">1:1
-                            문의하기</a>
-                        </li>
-                        <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">1:1
-                            문의내역</a>
-                        </li>
-                    </ul>
-                </div>
+                <div
+                        id="kakao-talk-channel-chat-button"
+                        data-channel-public-id="_xnuxbaG"
+                        data-title="consult"
+                        data-size="small"
+                        data-color="mono"
+                        data-shape="pc"
+                        data-support-multiple-densities="true"
+                ></div>
             </li>
         </ul>
     </div>
