--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -171,19 +171,19 @@
                                role="button" aria-expanded="false">카테고리</a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a href="/" class="dropdown-item">베스트셀러</a>
+                                    <a href="http://localhost:8010/book/list/베스트셀러" class="dropdown-item">베스트셀러</a>
                                 </li>
                                 <li>
-                                    <a href="blog.html" class="dropdown-item">무료 eBook</a>
+                                    <a href="http://localhost:8010/book/list/무료%20Ebook" class="dropdown-item">무료 eBook</a>
                                 </li>
                                 <li>
-                                    <a href="shop.html" class="dropdown-item">외국도서</a>
+                                    <a href="http://localhost:8010/book/list/외국%20도서" class="dropdown-item">외국도서</a>
                                 </li>
                                 <li>
-                                    <a href="cart.html" class="dropdown-item">국내도서</a>
+                                    <a href="http://localhost:8010/book/list/국내%20도서" class="dropdown-item">국내도서</a>
                                 </li>
                                 <li>
-                                    <a href="checkout.html" class="dropdown-item">대여 eBook</a>
+                                    <a href="http://localhost:8010/book/list" class="dropdown-item">Ebook</a>
                                 </li>
                             </ul>
                         </li>
