--- a/src/main/resources/templates/book/book_list.html
+++ b/src/main/resources/templates/book/book_list.html
@@ -74,7 +74,7 @@
                             <!--수정중-->
                             <form th:action="@{|/orders/pay/${book.id}|}" method="post">
                             <button  type="submit"  class="btn btn-sm btn-primary"
-                                style="width: 150px; margin-top:5px">결제</button>
+                                style="width: 100%; margin-top:5px">결제</button>
                             </form>
                         </li>
                     </ul>
