--- a/src/main/resources/static/css/book/book_detail.css
+++ b/src/main/resources/static/css/book/book_detail.css
@@ -1,6 +1,6 @@
 .bt_section {
     width: 100%;
-    height: 2000px;
+    height: auto;
 }
 
 /*판매(책) 상단부*/
@@ -28,16 +28,15 @@
 
 /*판매(책) 중간*/
 .book_middle-section {
-    border: 1px solid rgb(0,0,0,.125);
     width: auto;
-    height: 2000px;
+    height: auto;
 }
 
 
 /*판매(책) 하단 (리뷰 영역)*/
 .book_bottom-section {
     width: auto;
-    height: 900px;
+    height: auto;
 }
 .review_form {
     padding: 0.5rem 1rem;
@@ -56,7 +55,7 @@
     text-align: center;
 }
 .book_info {
-    height: 1000px;
+    height: 100%;
     width: 100%;
 }
 
